# case-converter

./: .gitignore  README.md  pyproject.toml
src/case_converter/: console.py  converters.py  regex.py
tests/: test_console.py
