[tool.poetry]
name = "case-converter"
version = "0.1.0"
description = "Convert the case of names in your source code."
authors = ["thevirtuoso1973"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
