[tool.poetry]
name = "case-converter"
version = "0.1.0"
description = "Convert the case of names/identifiers in your source code."
authors = ["thevirtuoso1973"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.poetry.scripts]
case-converter = "case_converter.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
